# varalio_home_assigment

./: .gitignore  README.md  commands.txt  pyproject.toml
conversation-health-ui/: package-lock.json  package.json  tailwind.config.js
conversation-health-ui/src/: App.jsx  index.css
conversation-health-ui/src/components/analysis/: CriteriaGrid.jsx  OverallAssessment.jsx  OverallScore.jsx  QualityIndicators.jsx  ResultsPanel.jsx  UncertaintyInfo.jsx
conversation-health-ui/src/components/input/: ConversationInput.jsx  InputPanel.jsx  TestCaseSelector.jsx
conversation-health-ui/src/components/ui/: Badge.jsx  Button.jsx  Card.jsx  ProgressBar.jsx  Select.jsx  Textarea.jsx
conversation-health-ui/src/hooks/: useAnalysis.js
conversation-health-ui/src/utils/: cn.js  constants.js  helpers.js
src/: app.py  config.json  config_manager.py  graph_builder.py  llm.py  logger.py  models.py  node_builders.py  prompts.py  pydantic_model_creators.py  score_calculator.py  streamlit_app.py  subgraph_creators.py  test_cases.json  utils.py
tests/: conftest.py
tests/unit/: test_config.json  test_config_manager.py  test_conversation_health_builder.py  test_graph_builder.py  test_llm.py  test_node_builder.py  test_pydantic_model_creator.py  test_score_calculator.py  test_subgraph_creators.py
ui_mock/: code.tsx
